--- a/portfolio.html
+++ b/portfolio.html
@@ -33,11 +33,11 @@
     </header>
     <main>
       <ul class="filter">
-        <li><a href="" class="list-works">Все</a></li>
-        <li><a href="" class="list-works">Веб-сайты</a></li>
-        <li><a href="" class="list-works">Приложения</a></li>
-        <li><a href="" class="list-works">Дизайн</a></li>
-        <li><a href="" class="list-works">Маркетинг</a></li>
+        <li><button class="list-works">Все<button></li>
+        <li><button class="list-works">Веб-сайты<button></li>
+        <li><button class="list-works">Приложения<button></li>
+        <li><button class="list-works">Дизайн<button></li>
+        <li><button class="list-works">Маркетинг<button></li>
       </ul>
       <ul class="work-list">
         <li>
@@ -91,7 +91,7 @@
       <a href="index.html" class="logo"><span>Web </span>Studio</a>
 
       <div class="adress">
-        <p class="version">г. Киев, пр-т Леси Украинки, 26</p>
+        <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
         <p>
           <a href="mailto:info@example.com" class="version">info@example.com</a>
         </p>
