--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <nav>
         <a href="./index.html" class="logo"><span>Web</span> Studio</a>
         <ul class="site-nav">
-          <li><a href="" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+          <li class="link"><a href="">Студия</a></li>
+          <li class="link"><a href="./portfolio.html">Портфолио</a></li>
+          <li class="link"><a href="">Контакты</a></li>
         </ul>
       </nav>
       <ul class="auth-nav">
@@ -160,12 +160,12 @@
       <section>
         <h2 class="clients">Постоянные клиенты</h2>
         <ul class="clients-list">
-          <li><a href="" class="list"></a></li>
-          <li><a href="" class="list"></a></li>
-          <li><a href="" class="list"></a></li>
-          <li><a href="" class="list"></a></li>
-          <li><a href="" class="list"></a></li>
-          <li><a href="" class="list"></a></li>
+          <li class="list"><a href=""></a></li>
+          <li class="list"><a href=""></a></li>
+          <li class="list"><a href=""></a></li>
+          <li class="list"><a href=""></a></li>
+          <li class="list"><a href=""></a></li>
+          <li class="list"><a href=""></a></li>
         </ul>
       </section>
     </main>
@@ -173,7 +173,7 @@
       <a href="index.html" class="logo"><span>Web </span>Studio</a>
 
       <div class="adress">
-        <p class="version">г. Киев, пр-т Леси Украинки, 26</p>
+        <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
         <p>
           <a href="mailto:info@example.com" class="version">info@example.com</a>
         </p>
