--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
       <nav>
         <a href="./index.html" class="logo"><span>Web</span> Studio</a>
         <ul class="site-nav">
-          <li><a href="" class="link">Студия</a></li>
+          <li><a href="./index.html" class="link">Студия</a></li>
           <li><a href="" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
@@ -33,11 +33,11 @@
     </header>
     <main>
       <ul class="filter">
-        <li><button class="list-works">Все<button></li>
-        <li><button class="list-works">Веб-сайты<button></li>
-        <li><button class="list-works">Приложения<button></li>
-        <li><button class="list-works">Дизайн<button></li>
-        <li><button class="list-works">Маркетинг<button></li>
+        <li><button type="button" class="list-works">Все</button></li>
+        <li><button type="button" class="list-works">Веб-сайты</button></li>
+        <li><button type="button" class="list-works">Приложения</button></li>
+        <li><button type="button" class="list-works">Дизайн</button></li>
+        <li><button type="button" class="list-works">Маркетинг</button></li>
       </ul>
       <ul class="work-list">
         <li>
